# papd

./: .gitignore  CMakeLists.txt  main.cpp
data/: constants.json
database/: CMakeLists.txt  config.cpp  config.h  database.cpp  database.h  json_database.cpp  json_database.h  value.cpp  value.h
dflow/: CMakeLists.txt  dflow.cpp  dflow.h
executor/: CMakeLists.txt  base_executor.h  base_generator.h  base_task.cpp  base_task.h  cpp_generator.cpp  cpp_generator.h  executable_task.cpp  executable_task.h  executors.h  fem_generator.cpp  fem_generator.h  generators.h  interpretator_task.cpp  interpretator_task.h  python_generator.cpp  python_generator.h
modules/: README.md
modules/10C02/: 10CO2.edp  metadata.json
modules/3AC/: 3AC.edp  metadata.json  papd_config.edp  quote.edp  stdout
modules/3AC/Result AC/60/: Anode.txt  H2.txt  O2.txt  dl.txt  tt.txt
modules/BIO/: CMakeLists.txt  bio.cpp  metadata.json  papd_config.h
modules/Sample/: metadata.json  papd_config.py  sample.py  stdout
modules/dflow/: calculation_results.json
project/: CMakeLists.txt  projects.cpp  projects.h
projects/sample/: metadata.json
visual/gnu_plot/: gnuplotInterface.edp
